added the first blog

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my-first-github-repo</title>
+    <title>my first github repo</title>
+    <link rel="stylesheet" href="styles/blog.ccs">
 </head>
 <body>
-    
+    <div>
+        <h3>my first web side </h3>
+        <p>your first commit is done. now you can change your code and commit again also you can push your code to github</p>
+    </div>
 </body>
 </html>
