added a list to push code

--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
         <h3>my first web side </h3>
         <p>your first commit is done. now you can change your code and commit again also you can push your code to github</p>
     </div>
+    <div>
+        <h3>
+            you to push incremental code</h3>
+            <ul>
+                <li>
+                    git add .
+                </li>git commit -m"add a meaningful commit massage"
+                <li>
+                    <li>git push</li>
+
+                </li>
+            </ul>
+    </div>
 </body>
 </html>
