added my all list

--- a/index.html
+++ b/index.html
@@ -17,12 +17,27 @@
             <ul>
                 <li>
                     git add .
-                </li>git commit -m"add a meaningful commit massage"
-                <li>
+                </li>git commit -m"add a meaningful commit massage"<li>
                     <li>git push</li>
 
                 </li>
             </ul>
+    </div>
+    <div>
+        <p>
+            Rangpur, <strong>Bangladesh—In</strong> a disturbing escalation of human rights abuses, peaceful minority protesters traveling to a planned demonstration in Rangpur have been met with violence and <i>systematic suppression</i>. The protest, led by Chinmaya Prabhu, a <span>religious leader turned</span> human rights advocate, aimed to highlight the ongoing pogrom against Bangladesh's minorities, particularly Hindus. However, the events leading…
+        </p>
+    </div>
+    <div>
+        <h3>
+            <ul>
+                <li>mango</li>
+                <li>egg</li>
+                <li>apple</li>
+                <li>cat</li>
+                <li>rat</li>
+            </ul>
+        </h3>
     </div>
 </body>
 </html>
