--- a/index.html
+++ b/index.html
@@ -61,5 +61,13 @@
             </ul>
         </h3>
     </div>
+   <div>
+    <h3>you to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m" added minigful massegae"</li>
+        <li>git push</li>
+    </ul>
+   </div>
 </body>
 </html>
