--- a/index.html
+++ b/index.html
@@ -69,5 +69,9 @@
         <li>git push</li>
     </ul>
    </div>
+  <div>
+    <h3>kim kim khai everyday one single dim</h3>
+    <img src="imag/dog.jpg" alt="comming soon">
+  </div>
 </body>
 </html>
